# openapi.yaml
@@ -6,7 +6,78 @@ info:
     title: ""
     version: 0.0.1
 paths:
-    /api/v1/permissions:
+    /v1/errors:
+        get:
+            tags:
+                - ErrorService
+            description: 获取所有错误码列表
+            operationId: ErrorService_ListErrorCodes
+            parameters:
+                - name: errorType
+                  in: query
+                  schema:
+                    type: string
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+                - name: pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/errors.v1.ListErrorCodesReply'
+    /v1/errors/custom:
+        post:
+            tags:
+                - ErrorService
+            description: 创建自定义错误
+            operationId: ErrorService_CreateCustomError
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/errors.v1.CreateCustomErrorRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/errors.v1.CreateCustomErrorReply'
+    /v1/errors/{errorCode}:
+        get:
+            tags:
+                - ErrorService
+            description: 获取错误信息
+            operationId: ErrorService_GetErrorInfo
+            parameters:
+                - name: errorCode
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int32
+                - name: errorType
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/errors.v1.GetErrorInfoReply'
+    /v1/permissions:
         get:
             tags:
                 - RBACService
@@ -54,7 +125,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.rbac.v1.CreatePermissionResponse'
-    /api/v1/permissions/check:
+    /v1/permissions/check:
         post:
             tags:
                 - RBACService
@@ -73,7 +144,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.rbac.v1.CheckPermissionResponse'
-    /api/v1/permissions/{id}:
+    /v1/permissions/{id}:
         get:
             tags:
                 - RBACService
@@ -135,7 +206,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.rbac.v1.DeletePermissionResponse'
-    /api/v1/roles:
+    /v1/roles:
         get:
             tags:
                 - RBACService
@@ -179,7 +250,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.rbac.v1.CreateRoleResponse'
-    /api/v1/roles/{id}:
+    /v1/roles/{id}:
         get:
             tags:
                 - RBACService
@@ -241,7 +312,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.rbac.v1.DeleteRoleResponse'
-    /api/v1/roles/{roleId}/permissions:
+    /v1/roles/{roleId}/permissions:
         get:
             tags:
                 - RBACService
@@ -285,7 +356,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.rbac.v1.AssignRolePermissionResponse'
-    /api/v1/roles/{roleId}/permissions/{permissionId}:
+    /v1/roles/{roleId}/permissions/{permissionId}:
         delete:
             tags:
                 - RBACService
@@ -310,147 +381,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.rbac.v1.RemoveRolePermissionResponse'
-    /api/v1/users/{userId}/roles:
-        get:
-            tags:
-                - RBACService
-            description: 用户角色管理
-            operationId: RBACService_GetUserRoles
-            parameters:
-                - name: userId
-                  in: path
-                  required: true
-                  schema:
-                    type: integer
-                    format: int32
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.rbac.v1.GetUserRolesResponse'
-        post:
-            tags:
-                - RBACService
-            operationId: RBACService_AssignUserRole
-            parameters:
-                - name: userId
-                  in: path
-                  required: true
-                  schema:
-                    type: integer
-                    format: int32
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/api.rbac.v1.AssignUserRoleRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.rbac.v1.AssignUserRoleResponse'
-    /api/v1/users/{userId}/roles/{roleId}:
-        delete:
-            tags:
-                - RBACService
-            operationId: RBACService_RemoveUserRole
-            parameters:
-                - name: userId
-                  in: path
-                  required: true
-                  schema:
-                    type: integer
-                    format: int32
-                - name: roleId
-                  in: path
-                  required: true
-                  schema:
-                    type: integer
-                    format: int32
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.rbac.v1.RemoveUserRoleResponse'
-    /errors:
-        get:
-            tags:
-                - ErrorService
-            description: 获取所有错误码列表
-            operationId: ErrorService_ListErrorCodes
-            parameters:
-                - name: errorType
-                  in: query
-                  schema:
-                    type: string
-                - name: page
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: pageSize
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/errors.v1.ListErrorCodesReply'
-    /errors/custom:
-        post:
-            tags:
-                - ErrorService
-            description: 创建自定义错误
-            operationId: ErrorService_CreateCustomError
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/errors.v1.CreateCustomErrorRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/errors.v1.CreateCustomErrorReply'
-    /errors/{errorCode}:
-        get:
-            tags:
-                - ErrorService
-            description: 获取错误信息
-            operationId: ErrorService_GetErrorInfo
-            parameters:
-                - name: errorCode
-                  in: path
-                  required: true
-                  schema:
-                    type: integer
-                    format: int32
-                - name: errorType
-                  in: query
-                  schema:
-                    type: string
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/errors.v1.GetErrorInfoReply'
-    /student:
+    /v1/student:
         post:
             tags:
                 - Student
@@ -468,7 +399,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/student.v1.CreateStudentReply'
-    /student/{id}:
+    /v1/student/{id}:
         get:
             tags:
                 - Student
@@ -530,7 +461,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/student.v1.DeleteStudentReply'
-    /students:
+    /v1/students:
         get:
             tags:
                 - Student
@@ -555,7 +486,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/student.v1.ListStudentsReply'
-    /user:
+    /v1/user:
         post:
             tags:
                 - User
@@ -574,7 +505,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/user.v1.CreateUserReply'
-    /user/login:
+    /v1/user/login:
         post:
             tags:
                 - User
@@ -593,7 +524,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/user.v1.LoginReply'
-    /user/{id}:
+    /v1/user/{id}:
         get:
             tags:
                 - User
@@ -657,7 +588,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/user.v1.DeleteUserReply'
-    /users:
+    /v1/users:
         get:
             tags:
                 - User
@@ -687,6 +618,75 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/user.v1.ListUsersReply'
+    /v1/users/{userId}/roles:
+        get:
+            tags:
+                - RBACService
+            description: 用户角色管理
+            operationId: RBACService_GetUserRoles
+            parameters:
+                - name: userId
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int32
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.rbac.v1.GetUserRolesResponse'
+        post:
+            tags:
+                - RBACService
+            operationId: RBACService_AssignUserRole
+            parameters:
+                - name: userId
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int32
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.rbac.v1.AssignUserRoleRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.rbac.v1.AssignUserRoleResponse'
+    /v1/users/{userId}/roles/{roleId}:
+        delete:
+            tags:
+                - RBACService
+            operationId: RBACService_RemoveUserRole
+            parameters:
+                - name: userId
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int32
+                - name: roleId
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int32
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.rbac.v1.RemoveUserRoleResponse'
 components:
     schemas:
         api.rbac.v1.AssignRolePermissionRequest:
